[package]
name = "mbell"
version = "0.1.0"
edition = "2021"
authors = ["mbell contributors"]
description = "A mindfulness bell daemon for Linux"
license = "MIT"
repository = "https://github.com/yourusername/mbell"
keywords = ["mindfulness", "bell", "daemon", "notification"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "signal"] }
rodio = { version = "0.19", default-features = false, features = ["vorbis"] }
zbus = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
daemonize = "0.5"
libc = "0.2"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
